# ompa

./: .travis.yml  Cargo.toml  Procfile
src/: chores.rs  entertainment.rs  housework.rs  lib.rs  logger.rs  main.rs  models.rs  ole_martin.rs  postgresql.rs  service.rs  test_actions.rs  todoist.rs  views.rs
src/chores/: database.rs  messages.rs
src/ole_martin/: handlers.rs  messages.rs  notifier.rs  sorter.rs  tracker.rs  views.rs
src/personal/: todoist.rs
src/service/: todoist.rs
src/todoist/: messages.rs  service.rs
templates/: example.html  index.html  index.html.tera
